--- a/src/component/logic/message/1.0.0/message.scss
+++ b/src/component/logic/message/1.0.0/message.scss
@@ -21,7 +21,8 @@
 }
 .pkui-message-popup {
     position: absolute;
-    z-index: 3;
+    // 会跟 art-dialog 进行比较，为什么？
+    z-index: 2000;
     top: 100%;
     left: 0;
     line-height: 1.35;
@@ -122,6 +123,7 @@
 .pkui-message-menu-list {
     display: none;
     position: relative;
+    min-height: 160px;
     max-height: 400px;
     overflow: auto;
 }
@@ -153,29 +155,47 @@
     padding: 8px 10px;
     line-height: 16px;
     //font-size: 12px;
-    text-align: right;
+    //text-align: right;
     background: #f6f8fa;
     border-top: 1px solid #e1e4e8;
 }
 .pkui-message-more {
+    float: right;
 
 }
 .pkui-message-refresh {
-    float: left;
-    width: 16px;
-    height: 16px;
-    font-size: 14px;
-    line-height: 1;
-    color: #c6cbd1;
-    cursor: pointer;
-    background: transparent;
-    border: 0;
-    -webkit-appearance: none;
-    &:focus,
-    &:hover {
-        color: #444d56;
+    //width: 16px;
+    //height: 16px;
+    //font-size: 14px;
+    //line-height: 1;
+    //color: #c6cbd1;
+    //cursor: pointer;
+    //background: transparent;
+    //border: 0;
+    //-webkit-appearance: none;
+    //&:focus,
+    //&:hover {
+    //    color: #444d56;
+    //}
+    //&:focus {
+    //    outline: none;
+    //}
+}
+.pkui-message-refreshInfo {
+    &.loading {
+        .pkui-message-refreshInfo-text {
+            display: none;
+        }
+        .pkui-message-refreshInfo-loading {
+            display: inline-block;
+        }
     }
-    &:focus {
-        outline: none;
-    }
+}
+.pkui-message-refreshInfo-text {
+}
+.pkui-message-refreshInfo-loading {
+    display: none;
+    padding-left: 20px;
+    min-height: 16px;
+    background: url(./icon_loading.gif) no-repeat left center;
 }
