【PKUI】message：更新样式

--- a/src/component/logic/message/1.0.0/message.css
+++ b/src/component/logic/message/1.0.0/message.css
@@ -24,13 +24,38 @@
   text-shadow: none;
   cursor: default;
 }
+.pkui-message-popup.right .pkui-message-panel-arrow {
+  top: 50%;
+  left: -7px;
+  margin-top: -7px;
+  border-width: 7px 7px 7px 0;
+  border-right-color: #f6f8fa;
+}
+.pkui-message-popup.top .pkui-message-panel-arrow {
+  bottom: -7px;
+  left: 50%;
+  margin-left: -7px;
+  border-width: 7px 7px 0;
+  border-top-color: #f6f8fa;
+}
+.pkui-message-popup.left .pkui-message-panel-arrow {
+  top: 50%;
+  right: -7px;
+  margin-top: -7px;
+  border-width: 7px 0 7px 7px;
+  border-left-color: #f6f8fa;
+}
+.pkui-message-popup.bottom .pkui-message-panel-arrow {
+  top: -7px;
+  left: 50%;
+  margin-left: -7px;
+  border-width: 0 7px 7px;
+  border-bottom-color: #f6f8fa;
+}
 
 .pkui-message-panel {
   position: relative;
   width: 300px;
-  margin-top: 4px;
-  margin-bottom: 20px;
-  overflow: hidden;
   font-size: 12px;
   color: #586069;
   background-color: #fff;
@@ -41,12 +66,21 @@
   box-shadow: 0 3px 12px rgba(27, 31, 35, 0.15);
 }
 
+.pkui-message-panel-arrow {
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+}
+
 .pkui-message-panel-header {
   padding: 8px 10px;
   line-height: 16px;
   font-size: 14px;
   background: #f6f8fa;
   border-bottom: 1px solid #e1e4e8;
+  border-radius: 3px 3px 0 0;
 }
 
 .pkui-message-panel-header-title {
@@ -133,28 +167,68 @@
   position: relative;
   display: block;
   padding: 8px 30px 8px 30px;
-  overflow: hidden;
   color: inherit;
   border-bottom: 1px solid #eaecef;
+}
+.pkui-message-menu-item .pkui-message-icon-origin {
+  display: inline-block;
+}
+.pkui-message-menu-item .pkui-message-icon-marked {
+  color: #1d9d74;
+  display: none;
+}
+.pkui-message-menu-item.marking .pkui-message-icon-origin {
+  display: none;
+}
+.pkui-message-menu-item.marking .pkui-message-icon-marked {
+  display: none;
+}
+.pkui-message-menu-item.marking .pkui-message-menu-item-icon {
+  background: url(./icon_loading.gif) no-repeat left center;
+}
+.pkui-message-menu-item.marked .pkui-message-icon-origin {
+  display: none;
+}
+.pkui-message-menu-item.marked .pkui-message-icon-marked {
+  display: inline-block;
+}
+.pkui-message-menu-item.marked .pkui-message-menu-item-title {
+  color: #888;
 }
 
 .pkui-message-menu-item-icon {
   float: left;
+  width: 16px;
+  height: 16px;
   margin-left: -20px;
   color: #999;
   vertical-align: middle;
 }
 
-.pkui-message-menu-item-text {
+.pkui-message-menu-item-title {
   display: block;
   max-width: 100%;
   word-break: break-all;
 }
 
+.pkui-message-menu-item-content {
+  display: none;
+  max-width: 100%;
+  padding: 6px;
+  margin-top: 4px;
+  margin-left: -6px;
+  margin-right: -6px;
+  line-height: 1.5;
+  background: #F5F5F5;
+  color: #333;
+  word-break: break-all;
+  cursor: text;
+}
+
 .pkui-message-menu-item-date {
   display: block;
   margin-top: 4px;
-  color: #999;
+  color: #aaa;
 }
 
 .pkui-message-menu-item-view {
@@ -164,6 +238,36 @@
   width: 30px;
   padding: 10px 0;
   text-align: center;
+}
+.pkui-message-menu-item-view > .pkui-message-icon-open {
+  display: inline-block;
+}
+.pkui-message-menu-item-view > .pkui-message-icon-close {
+  display: none;
+}
+.pkui-message-menu-item-view.opened > .pkui-message-icon-open {
+  display: none;
+}
+.pkui-message-menu-item-view.opened > .pkui-message-icon-close {
+  display: inline-block;
+}
+
+.pkui-message-view-panel {
+  position: absolute;
+  right: 50%;
+  bottom: 50%;
+  width: 240px;
+  max-height: 200px;
+  padding: 8px 6px;
+  overflow: auto;
+  word-break: break-all;
+  text-align: left;
+  background: #fff;
+  color: #666;
+  border-color: #eee;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-radius: 3px;
+  box-shadow: 0 3px 12px rgba(27, 31, 35, 0.15);
 }
 
 .pkui-message-panel-footer {
@@ -180,6 +284,7 @@
 .pkui-message-refresh {
   float: right;
   margin-right: 12px;
+  border-radius: 0 0 3px 3px;
 }
 
 .pkui-message-loadInfo-text {
@@ -210,6 +315,7 @@
 
 .pkui-message-loadInfo-history {
   position: relative;
+  margin-left: 6px;
 }
 .pkui-message-loadInfo-history:hover .pkui-message-history-list, .pkui-message-loadInfo-history:focus .pkui-message-history-list {
   display: block;
@@ -226,7 +332,8 @@
   display: none;
   position: absolute;
   bottom: 102%;
-  width: 200px;
+  width: 240px;
+  padding: 8px 6px;
   max-height: 200px;
   overflow: auto;
   background: #fff;
