--- a/app/laweye/css/page/starter.css
+++ b/app/laweye/css/page/starter.css
@@ -31,6 +31,24 @@
 .starter-panel {
   height: 100%;
 }
+.starter-panel.radius-top-left .starter-panel-heading {
+  border-top-left-radius: 6px;
+}
+.starter-panel.radius-top-left .starter-panel-body {
+  border-top-left-radius: 8px;
+}
+.starter-panel.radius-top-right .starter-panel-heading {
+  border-top-right-radius: 6px;
+}
+.starter-panel.radius-top-right .starter-panel-body {
+  border-top-right-radius: 8px;
+}
+.starter-panel.radius-bottom-left .starter-panel-body {
+  border-bottom-left-radius: 6px;
+}
+.starter-panel.radius-bottom-right .starter-panel-body {
+  border-bottom-right-radius: 6px;
+}
 
 .starter-panel-heading {
   position: relative;
@@ -41,15 +59,12 @@
   text-align: center;
   color: #fff;
   background-color: #165ea8;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
 }
 
 .starter-panel-body {
   height: 100%;
   margin-top: -48px;
   padding-top: 48px;
-  border-radius: 4px;
   background-color: #fff;
   cursor: auto;
   -webkit-box-sizing: border-box;
@@ -111,9 +126,6 @@
 .starter-shoutcutList {
   width: 100%;
   height: 100%;
-  overflow: hidden;
-}
-.starter-shoutcutList:hover, .starter-shoutcutList.overflow-auto {
   overflow: auto;
 }
 
@@ -142,9 +154,6 @@
 
 .starter-panel-linkList .starter-panel-body {
   padding: 58px 10px 10px 10px;
-  overflow: hidden;
-}
-.starter-panel-linkList .starter-panel-body:hover, .starter-panel-linkList .starter-panel-body.overflow-auto {
   overflow: auto;
 }
 
