--- a/app/laweye/css/page/starter.scss
+++ b/app/laweye/css/page/starter.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .launchpad-starter {
     position: relative;
     width: 80%;
@@ -33,6 +35,32 @@
 }
 .starter-panel {
     height: 100%;
+    &.radius-top-left {
+        .starter-panel-heading {
+            border-top-left-radius: $starter-panel-radius;
+        }
+        .starter-panel-body {
+            border-top-left-radius: $starter-panel-radius + 2;
+        }
+    }
+    &.radius-top-right {
+        .starter-panel-heading {
+            border-top-right-radius: $starter-panel-radius;
+        }
+        .starter-panel-body {
+            border-top-right-radius: $starter-panel-radius + 2;
+        }
+    }
+    &.radius-bottom-left {
+        .starter-panel-body {
+            border-bottom-left-radius: $starter-panel-radius;
+        }
+    }
+    &.radius-bottom-right {
+        .starter-panel-body {
+            border-bottom-right-radius: $starter-panel-radius;
+        }
+    }
 }
 .starter-panel-heading {
     position: relative;
@@ -44,14 +72,14 @@
     color: #fff;
     background-color: #165ea8;
 
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    //border-top-left-radius: 4px;
+    //border-top-right-radius: 4px;
 }
 .starter-panel-body {
     height: 100%;
     margin-top: -48px;
     padding-top: 48px;
-    border-radius: 4px;
+    //border-radius: 4px;
     background-color: #fff;
     cursor: auto;
 
@@ -111,11 +139,13 @@
 .starter-shoutcutList {
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    &:hover,
-    &.overflow-auto {
-        overflow: auto;
-    }
+    overflow: auto;
+    //overflow: hidden;
+
+    //&:hover,
+    //&.overflow-auto {
+    //    overflow: auto;
+    //}
 }
 .starter-shoutcutItem {
     float: left;
@@ -142,11 +172,13 @@
 .starter-panel-linkList  {
     .starter-panel-body {
         padding: 58px 10px 10px 10px;
-        overflow: hidden;
-        &:hover,
-        &.overflow-auto {
-            overflow: auto;
-        }
+        overflow: auto;
+        //overflow: hidden;
+
+        //&:hover,
+        //&.overflow-auto {
+        //    overflow: auto;
+        //}
     }
 }
 .starter-linkList {
