--- a/app/desktop/css/page/_launchpad.scss
+++ b/app/desktop/css/page/_launchpad.scss
@@ -105,17 +105,17 @@
     //background: rgba(0,0,0,.2);
     position: absolute;
     z-index: 2;
-    bottom: 50px;
-    left: 0;
-    width: 100%;
+    top: 45%;
+    right: 0;
+    width: 20px;
     height: 0;
-    text-align: center;
+    //text-align: center;
 }
 .launchpad-pagination-switchItem {
     display: inline-block;
     width: 12px;
     height: 12px;
-    margin: 0 12px;
+    margin: 0 0 6px 0;
     border-radius: 12px;
     background-color: #6e9ec0;
     @include box-shadow(inset 0 0 1px rgba(0, 0, 0, 0.35));
