--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -9805,18 +9805,17 @@ Pagination Styles
 .launchpad-pagination-switchList {
   position: absolute;
   z-index: 2;
-  bottom: 50px;
-  left: 0;
-  width: 100%;
+  top: 45%;
+  right: 0;
+  width: 20px;
   height: 0;
-  text-align: center;
 }
 
 .launchpad-pagination-switchItem, .swiper-pagination-switch {
   display: inline-block;
   width: 12px;
   height: 12px;
-  margin: 0 12px;
+  margin: 0 0 6px 0;
   border-radius: 12px;
   background-color: #6e9ec0;
   -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.35);
