--- a/app/desktop/css/page/_launchpad.scss
+++ b/app/desktop/css/page/_launchpad.scss
@@ -106,7 +106,7 @@
     position: absolute;
     z-index: 2;
     top: 45%;
-    right: 0;
+    right: 1%;
     width: 20px;
     height: 0;
     //text-align: center;
