--- a/app/laweye/css/page/starter.scss
+++ b/app/laweye/css/page/starter.scss
@@ -35,6 +35,8 @@
 }
 .starter-panel {
     height: 100%;
+    box-shadow: 0 3px 12px rgba(27, 31, 35, 0.15);
+    /*
     &.radius-top-left {
         .starter-panel-heading {
             border-top-left-radius: $starter-panel-radius;
@@ -60,7 +62,7 @@
         .starter-panel-body {
             border-bottom-right-radius: $starter-panel-radius;
         }
-    }
+    }*/
 }
 .starter-panel-heading {
     position: relative;
@@ -72,8 +74,8 @@
     color: #fff;
     background-color: #165ea8;
 
-    //border-top-left-radius: 4px;
-    //border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 .starter-panel-body {
     height: 100%;
@@ -83,6 +85,10 @@
     background-color: #fff;
     cursor: auto;
 
+    //border-bottom-left-radius: $starter-panel-radius;
+    //border-bottom-right-radius: $starter-panel-radius;
+
+    border-radius: $starter-panel-radius;
 
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
