【desktop】_launchpad.scss：让 整屏轮播分页器 更容易被选中。

--- a/app/desktop/css/page/_launchpad.scss
+++ b/app/desktop/css/page/_launchpad.scss
@@ -108,7 +108,8 @@
     top: 45%;
     right: 1%;
     width: 20px;
-    height: 0;
+    height: 50%;
+    text-align: center;
     //text-align: center;
 }
 .launchpad-pagination-switchItem {
