--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -9808,7 +9808,8 @@ Pagination Styles
   top: 45%;
   right: 1%;
   width: 20px;
-  height: 0;
+  height: 50%;
+  text-align: center;
 }
 
 .launchpad-pagination-switchItem, .swiper-pagination-switch {
