【PKUI】webuploader：重构(3)，完成文件类型显示

--- a/src/lib/component/webuploader/0.1.5.x2/css/webuploader.css
+++ b/src/lib/component/webuploader/0.1.5.x2/css/webuploader.css
@@ -109,8 +109,7 @@
   width: 110px;
   height: 146px;
   background: url(../images/bg.png) no-repeat;
-  text-align: center;
-  margin: 0 8px 8px 0;
+  margin: 8px;
   position: relative;
   display: inline;
   float: left;
@@ -179,8 +178,71 @@
   -ms-transition: 200ms ease-out;
   transition: 200ms ease-out;
 }
-.wu-full .wu-fileitem-thumbnail-placeholder {
-  background: url(../images/file_placeholder.png) no-repeat;
+.wu-full .wu-fileitem-thumbnail-file {
+  background: url(../images/file.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-avi {
+  background: url(../images/avi.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-css {
+  background: url(../images/css.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-doc,
+.wu-full .wu-fileitem-thumbnail-docx {
+  background: url(../images/doc.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-dwg {
+  background: url(../images/dwg.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-exe {
+  background: url(../images/exe.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-html {
+  background: url(../images/html.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-iso {
+  background: url(../images/iso.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-jpg {
+  background: url(../images/jpg.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-js {
+  background: url(../images/js.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-mp3 {
+  background: url(../images/mp3.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-mp4 {
+  background: url(../images/mp4.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-pdf {
+  background: url(../images/pdf.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-png {
+  background: url(../images/png.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-ppt,
+.wu-full .wu-fileitem-thumbnail-pptx {
+  background: url(../images/ppt.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-psd {
+  background: url(../images/psd.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-rtf {
+  background: url(../images/rtf.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-txt {
+  background: url(../images/txt.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-xls,
+.wu-full .wu-fileitem-thumbnail-xlsx {
+  background: url(../images/xls.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-xml {
+  background: url(../images/xml.png) no-repeat;
+}
+.wu-full .wu-fileitem-thumbnail-zip {
+  background: url(../images/zip.png) no-repeat;
 }
 .wu-full .wu-fileitem-img {
   width: 100%;
